# fastapi-tdd-docker

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: main.yml
fastapi-tdd-docker/: .coverage  .dockerignore  Dockerfile  Dockerfile.prod  requirements-dev.txt  requirements.txt
fastapi-tdd-docker/app/: db.py
fastapi-tdd-docker/app/api/: summaries.py
fastapi-tdd-docker/tests/: test_summaries.py  test_summaries_unit.py
