[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Kilian Tyler", email = "kilian@ktyler.me"},
]
dependencies = [
    "fastapi==0.85.1",
    "uvicorn==0.19.0",
    "asyncpg==0.27.0",
    "tortoise-orm==0.19.2",
    "aerich==0.7.1",
    "pytest==7.2.0",
    "requests==2.28.1",
    "gunicorn==20.1.0",
    "pytest-cov==4.0.0",
    "flake8==5.0.4",
    "black==22.10.0",
    "isort==5.10.1",
]
requires-python = ">=3.10"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool.pdm]

[tool.pdm.scripts]
requirements = "pdm export -o fastapi-tdd-docker/requirements.txt --without-hashes"
start = "uvicorn app.main:app --app-dir=fastapi-tdd-docker"
dev = "uvicorn app.main:app --reload --app-dir=fastapi-tdd-docker"
docker_build = "docker build -f fastapi-tdd-docker/Dockerfile.prod -t ghcr.io/kiliantyler/fastapi-tdd-docker/summarizer:latest ./fastapi-tdd-docker"
docker_login = "op run --no-masking -- docker login ghcr.io -u kiliantyler -p ${DOCKER_PASS}"
docker_push = "docker push ghcr.io/kiliantyler/fastapi-tdd-docker/summarizer:latest"