[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Kilian Tyler", email = "kilian@ktyler.me"},
]
dependencies = [
    "fastapi==0.85.1",
    "uvicorn==0.19.0",
    "asyncpg==0.27.0",
    "tortoise-orm==0.19.2",
    "aerich==0.7.1",
    "pytest==7.2.0",
    "requests==2.28.1",
    "gunicorn==20.1.0",
    "newspaper3k==0.2.8",
]
requires-python = ">=3.10"
license = {text = "MIT"}
[project.optional-dependencies]

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool.pdm]

[tool.pdm.scripts]
requirements = "pdm export --prod -o fastapi-tdd-docker/requirements.txt --without-hashes"
requirements_dev = "pdm export -G dev -o fastapi-tdd-docker/requirements-dev.txt --without-hashes"
start = "uvicorn app.main:app --app-dir=fastapi-tdd-docker"
dev = "uvicorn app.main:app --reload --app-dir=fastapi-tdd-docker"
docker_build = "docker build -f fastapi-tdd-docker/Dockerfile.prod -t ghcr.io/kiliantyler/fastapi-tdd-docker/summarizer:latest ./fastapi-tdd-docker"
docker_login = "op run --no-masking -- docker login ghcr.io -u kiliantyler -p ${DOCKER_PASS}"
docker_push = "docker push ghcr.io/kiliantyler/fastapi-tdd-docker/summarizer:latest"
compose = "docker-compose up -d --build"
test = "docker-compose exec web python -m pytest"
utest = "docker-compose exec web pytest -k 'unit' -n auto"
coverage = "docker-compose exec web python -m pytest --cov='.'"
black = "docker-compose exec web black ."
isort = "docker-compose exec web isort ."
flake = "docker-compose exec web flake8 ."

[tool.pdm.dev-dependencies]
dev = [
    "flake8>=5.0.4",
    "black==22.10.0",
    "isort==5.10.1",
    "pytest==7.2.0",
    "pytest-cov==4.0.0",
    "pytest-xdist==3.0.2",
]
